--- a/index.html
+++ b/index.html
@@ -12,14 +12,19 @@
 		<!-- Підключення шрифтів -->
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css2?family=Playfair%20Display:wght@400&display=swap" rel="stylesheet">
+		<link
+			href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
+			rel="stylesheet">
+		<link
+			href="https://fonts.googleapis.com/css2?family=Playfair%20Display:wght@400&display=swap"
+			rel="stylesheet">
 
 		<!--Підключення окремого файлу стилів -->
 		<link rel="stylesheet" href="css/style.css">
 		<!-- Заголовок сторінки в браузері (вкладці) -->
 		<title>Lesson 8</title>
 	</head>
+	HELLO WORLD!!!!!!!
 	<body>
 		<!-- 
 			Основне правило WEB-графіки:
