--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<picture class="flower-img">
 				<source srcset="img/flower.avif" type="image/avif">
 				<source srcset="img/flower.webp" type="image/webp">
-				<img class="flower-img" src="img/flower.png" alt="Flower">
+				<img class="flower-img" src=img/flower.png alt="Flower">
 			</picture>
 
 			<picture class="circle-img">
@@ -23,7 +23,7 @@
 
 			<picture class="pose pose1-img">
 				<source srcset="img/pose1.jpg 1x, img/pose1-2x.jpg 2x, img/pose1-3x.jpg 3x">
-				<img class="pose pose1-img" src="img/pose1.jpg" alt="Pose1">
+				<img class="pose pose1-img" src=img/pose1.jpg alt="Pose1">
 			</picture>
 			<picture class="pose pose2-img">
 				<source srcset="/img/pose2.webp" type="image/webp">
