--- a/index.html
+++ b/index.html
@@ -12,43 +12,43 @@
 		</header>
 		<main>
 			<picture class="flower-img">
-				<source srcset="img/flower.avif" type="image/avif">
-				<source srcset="img/flower.webp" type="image/webp">
+				<source srcset=img/flower.avif type=image/avif>
+				<source srcset=img/flower.webp type=image/webp>
 				<img class="flower-img" src=img/flower.png alt="Flower">
 			</picture>
 
 			<picture class="circle-img">
-				<img class="circle-img" src="img/circle.svg" alt="Flower">
+				<img class="circle-img" src=img/circle.svg alt="Flower">
 			</picture>
 
 			<picture class="pose pose1-img">
-				<source srcset="img/pose1.jpg 1x, img/pose1-2x.jpg 2x, img/pose1-3x.jpg 3x">
+				<source srcset=img/pose1.jpg 1x , img/pose1-2x.jpg 2x, img/pose1-3x.jpg 3x>
 				<img class="pose pose1-img" src=img/pose1.jpg alt="Pose1">
 			</picture>
 			<picture class="pose pose2-img">
-				<source srcset="/img/pose2.webp" type="image/webp">
-				<source srcset="/img/pose2.avif" type="image/avif">
-				<img class="pose pose2-img" src="/img/pose2.jpg" alt="Pose2">
+				<source srcset=img/pose2.webp type=image/webp>
+				<source srcset=img/pose2.avif type=image/avif>
+				<img class="pose pose2-img" src=img/pose2.jpg alt="Pose2">
 			</picture>
 			<picture class="pose pose3-img">
-				<source srcset="/img/pose3.avif" type="image/avif">
-				<source srcset="/img/pose3.webp" type="image/webp">
-				<img class="pose pose3-img" src="/img/pose3.jpg" alt="Pose3">
+				<source srcset=img/pose3.avif type=image/avif>
+				<source srcset=img/pose3.webp type=image/webp>
+				<img class="pose pose3-img" src=img/pose3.jpg alt="Pose3">
 			</picture>
 			<picture class="pose pose6-img">
-				<source srcset="/img/pose6.avif" type="image/avif">
-				<source srcset="/img/pose6.webp" type="image/webp">
-				<img class="pose pose6-img" src="/img/pose6.jpg" alt="Pose6">
+				<source srcset=img/pose6.avif type=image/avif>
+				<source srcset=img/pose6.webp type=image/webp>
+				<img class="pose pose6-img" src=img/pose6.jpg alt="Pose6">
 			</picture>
 			<picture class="pose pose7-img">
-				<source srcset="/img/pose7.avif" type="image/avif">
-				<source srcset="/img/pose7.webp" type="image/webp">
-				<img class="pose pose7-img" src="/img/pose7.jpg" alt="Pose7">
+				<source srcset=img/pose7.avif type=image/avif>
+				<source srcset=img/pose7.webp type=image/webp>
+				<img class="pose pose7-img" src=img/pose7.jpg alt="Pose7">
 			</picture>
 			<picture class="right-arrow">
-				<source srcset="/img/right-arrow.avif" type="image/avif">
-				<source srcset="/img/right-arrow.webp" type="image/webp">
-				<img class="right-arrow" src="/img/right-arrow.png" alt="Right-arrow">
+				<source srcset=img/right-arrow.avif type=image/avif>
+				<source srcset=img/right-arrow.webp type=image/webp>
+				<img class="right-arrow" src=img/right-arrow.png alt="Right-arrow">
 			</picture>
 		</main>
 		<footer>
