--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 			</picture>
 
 			<picture class="pose pose1-img">
-				<source srcset=img/pose1.jpg 1x , img/pose1-2x.jpg 2x, img/pose1-3x.jpg 3x>
+				<source
+					srcset="img/pose1.jpg 1x , img/pose1-2x.jpg 2x, img/pose1-3x.jpg 3x">
 				<img class="pose pose1-img" src=img/pose1.jpg alt="Pose1">
 			</picture>
 			<picture class="pose pose2-img">
